--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'com.nex3z:notification-badge:1.0.4'
+    implementation("org.greenrobot:eventbus:3.3.1")
 }
