--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'com.nex3z:notification-badge:1.0.4'
     implementation("org.greenrobot:eventbus:3.3.1")
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
