Thêm màn welcome và giao diện change password

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,15 @@
             android:name=".Activity.DoiMatKhauActivity"
             android:exported="false" />
         <activity
+            android:name=".Activity.WelcomeActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".Activity.ThanhToanActivity"
             android:exported="false" />
         <activity
@@ -38,13 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".Activity.DANGNHAP"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
